--- a/EDA Customer Ecommerce dataset.ipynb
+++ b/EDA Customer Ecommerce dataset.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "3bf6212f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-10T10:29:41.883629Z",
-     "start_time": "2022-06-10T10:29:39.591167Z"
+     "end_time": "2022-06-11T16:01:26.202538Z",
+     "start_time": "2022-06-11T16:01:23.404214Z"
     }
    },
    "outputs": [],
@@ -877,18 +877,207 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 3,
    "id": "1dd163a1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-10T11:25:47.454664Z",
-     "start_time": "2022-06-10T11:25:47.437224Z"
+     "end_time": "2022-06-11T16:01:37.779941Z",
+     "start_time": "2022-06-11T16:01:37.036589Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\pbann\\Anaconda3\\lib\\site-packages\\openpyxl\\worksheet\\_reader.py:312: UserWarning: Unknown extension is not supported and will be removed\n",
+      "  warn(msg)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>query</th>\n",
+       "      <th>hits</th>\n",
+       "      <th>clicks</th>\n",
+       "      <th>clickThroughs</th>\n",
+       "      <th>ctr</th>\n",
+       "      <th>carts</th>\n",
+       "      <th>orders</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>pink</td>\n",
+       "      <td>3971</td>\n",
+       "      <td>330</td>\n",
+       "      <td>93</td>\n",
+       "      <td>2.34</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Chambray</td>\n",
+       "      <td>612</td>\n",
+       "      <td>1360</td>\n",
+       "      <td>447</td>\n",
+       "      <td>73.04</td>\n",
+       "      <td>145</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>gingham in green and white</td>\n",
+       "      <td>601</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>white dresses</td>\n",
+       "      <td>486</td>\n",
+       "      <td>800</td>\n",
+       "      <td>310</td>\n",
+       "      <td>63.79</td>\n",
+       "      <td>73</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>grey</td>\n",
+       "      <td>480</td>\n",
+       "      <td>89</td>\n",
+       "      <td>28</td>\n",
+       "      <td>5.83</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>495</th>\n",
+       "      <td>Pleated knit</td>\n",
+       "      <td>14</td>\n",
+       "      <td>12</td>\n",
+       "      <td>6</td>\n",
+       "      <td>42.86</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>496</th>\n",
+       "      <td>Contrast</td>\n",
+       "      <td>14</td>\n",
+       "      <td>27</td>\n",
+       "      <td>7</td>\n",
+       "      <td>50.00</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>497</th>\n",
+       "      <td>1940s</td>\n",
+       "      <td>14</td>\n",
+       "      <td>8</td>\n",
+       "      <td>4</td>\n",
+       "      <td>28.57</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>498</th>\n",
+       "      <td>crimson</td>\n",
+       "      <td>14</td>\n",
+       "      <td>19</td>\n",
+       "      <td>5</td>\n",
+       "      <td>35.71</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>499</th>\n",
+       "      <td>watercolor</td>\n",
+       "      <td>14</td>\n",
+       "      <td>27</td>\n",
+       "      <td>9</td>\n",
+       "      <td>64.29</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>500 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          query  hits  clicks  clickThroughs    ctr  carts  \\\n",
+       "0                         pink   3971     330             93   2.34     18   \n",
+       "1                      Chambray   612    1360            447  73.04    145   \n",
+       "2    gingham in green and white   601       0              0   0.00      0   \n",
+       "3                 white dresses   486     800            310  63.79     73   \n",
+       "4                          grey   480      89             28   5.83     10   \n",
+       "..                          ...   ...     ...            ...    ...    ...   \n",
+       "495                Pleated knit    14      12              6  42.86      0   \n",
+       "496                   Contrast     14      27              7  50.00      4   \n",
+       "497                       1940s    14       8              4  28.57      4   \n",
+       "498                     crimson    14      19              5  35.71      8   \n",
+       "499                 watercolor     14      27              9  64.29      0   \n",
+       "\n",
+       "     orders  \n",
+       "0         0  \n",
+       "1         8  \n",
+       "2         0  \n",
+       "3         1  \n",
+       "4         0  \n",
+       "..      ...  \n",
+       "495       0  \n",
+       "496       0  \n",
+       "497       0  \n",
+       "498       0  \n",
+       "499       0  \n",
+       "\n",
+       "[500 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#df3=pd.read_excel(r'C:\\Users\\pbann\\OneDrive\\Desktop\\science\\data set\\Customer Raw data.xlsx',sheet_name='sheet3')\n",
-    "#df3"
+    "df3=pd.read_excel(r'C:\\Users\\pbann\\OneDrive\\Desktop\\science\\data set\\Customer Raw data.xlsx',sheet_name='sheet3')\n",
+    "df3"
    ]
   },
   {
